dfir_rs/tests/compile-fail-stable/surface_syntax_paren_missingop.rs
../compile-fail/surface_syntax_paren_missingop.rs